リンク修正

--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,7 @@
 
         <hr class="main_hr">
 
-        <p><a href="/pso2/ship8bot">PSO2 Ship8 Message Bot</a></p>
+        <p><a href="./pso2/ship8bot">PSO2 Ship8 Message Bot</a></p>
         
         <hr class="main_hr">
         
